# perfomance-wsgi-asgi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Locust.dockerfile  README.md  docker-compose.yml  gunicorn_config.py  locustfile.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  falcon_asgi_app.py  falcon_wsgi_app.py  fastapi_app.py
reports/: falcon_async_hypercorn.html  falcon_async_uvicorn.html  falcon_sync_bjoern.html  falcon_sync_gunicorn_eventlet.html  falcon_sync_gunicorn_gevent.html  falcon_sync_gunicorn_gthreads.html  falcon_sync_gunicorn_sync.html  falcon_sync_gunicorn_tornado.html  falcon_sync_uwsgi.html  falcon_sync_uwsgi_gevent.html  fastapi_async_gunicorn.html  fastapi_async_gunicorn_h11.html  fastapi_async_hypercorn.html  fastapi_async_uvicorn.html  fastapi_sync_gunicorn.html  fastapi_sync_gunicorn_h11.html  fastapi_sync_hypercorn.html  fastapi_sync_uvicorn.html  full.html
