[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jmarkin <yurmarkin97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
fastapi = "^0.65.1"
uvloop = "^0.15.2"
uvicorn = "^0.13.4"
Hypercorn = "^0.11.2"
bjoern = "^3.1.0"
click = "^7.0.0"
falcon = "^3.0.1"
httptools = "^0.2.0"
h11 = "^0.12.0"
uWSGI = "^2.0.19"
gunicorn = {version = "^20.1.0", extras = ["gevent", "tornado", "gthread"]}
eventlet = "0.30.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^5.4.3"
pytest-cov = "^2.8.1"
pytest-pythonpath = "^0.7.3"
pytest-env = "^0.6.2"
jedi = "<0.18" # fix ipython
yapf = {version="^0.31.0", extras=["toml"]}
pylint = "^2.7.2"
ipython = "^7.22.0"
isort = "^5.8.0"
pylint-quotes= "^0.2.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.yapf]
based_on_style = "google"

[tool.pytest.ini_options]
python_paths="app tests"
python_classes="*Test Test*"
python_files="test_*.py *_test.py"
python_functions="test_*  *_test"
norecursedirs=".venv .vscode .devcontainer scripts venv env deploy"
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: Show slow tests","new: Run only new tests"]
env = ["DB_DSN=sqlite://:memory:","JSON_LOGGING=False","LOG_LEVEL=DEBUG"]
addopts = "-s -p no:warning"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
